Initialize updating data

--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "test": "test"
   },
   "dependencies": {
-    "express" : "latest",
-    "request" : "latest",
-    "cheerio" : "latest",
+    "express": "latest",
+    "request": "latest",
+    "cheerio": "latest",
     "gulp-sass": "^2.3.2",
     "gulp": "^3.9.1",
     "browser-sync": "^2.13.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-concat": "^2.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
